# order

./: .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  codecov.yml  mcm.md  modeltest.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: lint_and_test.yml  publish_pypi.yml
docs/: conf.py  index.rst
order/: __init__.py  __meta__.py  logger.py  magics.py  mcm_rest.py  settings.py  types.py  util.py
order/adapters/: base.py  das.py  dataset.py  dbs.py  order.py  xsdb.py
order/models/: base.py  campaign.py  dataset.py  mixins.py  process.py  uncertainty.py  unique.py
tests/: __init__.py  coverage.sh  docker.sh  lint.sh  linting.sh  mcm_get_requests.py  test.sh  test_util.py  typecheck.sh
